manifest/objects/copado__Bundled_UserStory__c.object
<CustomObject>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__User_Story_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story Bundle</label>
        <referenceTo>copado__User_Story_Bundle__c</referenceTo>
        <relationshipName>Bundles_UserStories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipName>Artifacts_UserStories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bundled User Story</label>
    <nameField>
        <displayFormat>BUSB-{0000000}</displayFormat>
        <label>Bundled User Story Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundled User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>